# gleis

./: README.md  configure.ac
src/: Makefile.am  cleis2rdf.c  cleis2rdf.yuck  cleis4dbpjoin.c  cleis4dbpjoin.yuck  gleis2rdf.c  gleis2rdf.yuck  gleis4dbpjoin.c  gleis4dbpjoin.yuck  pleis2rdf.c  pleis2rdf.yuck  pleis4dbpjoin.c  pleis4dbpjoin.yuck
test/: cdf21.xml
